# revfirst_social

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
config/: brand_voice.yaml  limits.yaml  logging.yaml  plans.yaml  runtime.yaml  settings.py  strategy.yaml  telegram_admins.yaml  thresholds.yaml
data/: approved_queue.jsonl  candidates.jsonl  proposed_replies.jsonl  ranked_candidates.json
deploy/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  BRAND_VOICE.md  CONTROL_PLANE_PERMISSIONS.md  DATA_FLOW.md  DEPLOYMENT.md  DIAGNOSTICO_AGENTS_E_NOVOS_AGENTES_2026-02-21.md  GROWTH_STRATEGY.md  MASTER_IMPLEMENTATION_PLAN.md  OBSERVABILITY.md  OPERATIONAL_VALIDATION.md  PLANO_CORRECAO_GAPS_X_V2.md  PLANO_FECHAMENTO_GAPS_X.md  PLANO_IMPLEMENTACAO_TOTAL_AGENTS_X_2026-02-21.md  POLICY_X.md  PROJECT_CANONICAL.md  RUNBOOK.md  SAFETY_RULES.md  SCOPE.md  TELEGRAM_MESSAGE_CANONICAL_SPEC.md  VISION.md
migrations/: README  env.py
orchestrator/: agent_registry.json  manager.py  scheduler.py  storage.py  task_router.py
pipelines/: approve_queue.py  create_daily_post.py  execute_posts.py  fetch_metrics.py  ingest_open_calls.py  ingest_trends.py  io_utils.py  monitor_leads.py  propose_replies.py  rank_candidates.py  thread_hijack.py  weekly_report.py
schemas/: lead.schema.json  metrics.schema.json  post.schema.json  reply.schema.json  tweet_candidate.schema.json
scripts/: check_canonical_orchestrator.sh  check_production_secrets.sh  loadtest_basic.py
tests/: test_billing_plans.py  test_billing_webhook.py  test_health_api.py  (+40 more)
(+187 files in other folders)
